2002-9-24  Moshe Zadka <moshez@twistedmatrix.com>

	* .: Releasing 0.99.2rc2

2002-9-23  Donovan Preston <dp@twistedmatrix.com>

	* Renaming domtemplate/domwidgets/dominput/wmvc to Woven
	Woven - The Web Object Visualization Environment

	* Created package twisted/web/woven

	* Renamed domtemplate to template, domwidgets to widgets,
	and dominput to input

	* Refactored wmvc into three modules, model, view, and controller

2002-9-23  Moshe Zadka <moshez@twistedmatrix.com>

	* twisted/spread/pb.py: add getObjectAtSSL, refactored into
	getObjectRetreiver so more transports can be easily supported

2002-09-21  Kevin Turner  <acapnotic@twistedmatrix.com>

	* twisted/protocols/http.py (Request.setLastModified): Use
	setLastModified to set a timestamp on a http.Request object, and
	it will add a Last-Modified header to the outgoing reply.

	* twisted/web/resource.py (Resource.wasModifiedSince): companion
	method, override this to get sensible handling of
	If-Modified-Since conditional requests.

2002-09-21  Glyph Lefkowitz  <glyph@twistedmatrix.com>

	* twisted/web/static.py, twisted/web/script.py: Previously, it was
	  not possible to use the same xmlmvc application (directory full
	  of files and all) to interface to separate instances in the same
	  server, without a considerable amount of hassle.  We have
	  introduced a new "Registry" object which is passed to all .rpy
	  and .epy scripts as "registry" in the namespace.  This is a
	  componentized, so it can be used to associate different
	  components for the same interface for different File instances
	  which represent the same underlying directory.

2002-09-20  Glyph Lefkowitz  <glyph@twistedmatrix.com>

	* twisted/web/microdom.py: You can now specify tags that the
	  parser will automatically close if they are not closed
	  immediately.  This is to support output from HTML editors which
	  will not output XML, but still have a predictable
	  almost-but-not-quite XML structure.  Specifically it has been