@@ -1,3 +1,13 @@
+2002-09-24  Kevin Turner  <acapnotic@twistedmatrix.com>
+
+	* twisted/web/resource.py (Resource.wasModifiedSince): revoked,
+	not adding this after all.  Instead,
+
+	* twisted/protocols/http.py (Request.setLastModified)
+	(Request.setETag): these methods to set cache validation headers
+	for the request will return http.CACHED if the request is
+	conditional and this setting causes the condition to fail.
+
 2002-9-24  Moshe Zadka <moshez@twistedmatrix.com>
 
 	* .: Releasing 0.99.2rc2
